deployment/k8s/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: go-template
spec:
  type: NodePort
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
      nodePort: 31686
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      nodePort: 30317
    - name: otlp-http
      port: 4318
      targetPort: 4318
      nodePort: 30318
    - name: config
      port: 5778
      targetPort: 5778
      nodePort: 30578
    - name: zipkin
      port: 9411
      targetPort: 9411
      nodePort: 30411
